--- a/src/Argon/WebBundle/Resources/views/Page/homepage.html.twig
+++ b/src/Argon/WebBundle/Resources/views/Page/homepage.html.twig
@@ -1,6 +1,6 @@
 {% extends 'ArgonCommonBundle::layout.html.twig' %}
 
-{% block title %}ArgonBook - Welcome{% endblock %}
+{% block title %}{{ parent() }} - Welcome{% endblock %}
 
 {% block content %}
 Welcome!
