--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -18,22 +18,20 @@
   <div class="container">
     <div class="header">
       <ul class="nav nav-pills pull-right">
-        <li><a href="{{ path('homepage') }}">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
+        {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+            <li><a href="{{ path('fos_user_profile_show') }}">{{ app.user.username }}</a></li>
+            <li><a href="{{ path('fos_user_security_logout') }}">{{ 'layout.logout'|trans({}, 'FOSUserBundle') }}</a></li>
+        {% else %}
+            <li><a href="{{ path('fos_user_security_login') }}">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a></li>
+        {% endif %}
       </ul>
-      <h3 class="text-muted">{{ 'ArgonBook' }}
+      <h3 class="text-muted"><a href="{{ path('homepage') }}">{{ 'ArgonBook' }}</a>
         <small>{{ 'Alternate Reality Games Oriented Network' }}</small>
       </h3>
     </div>
 
-    <div class="row">
-      <div class="col-xs-12 col-sm-9">
+    {% block wrapper %}
         {% block content %}{% endblock %}
-      </div>
-      <div class="col-xs-6 col-sm-3">
-        RIGHT
-      </div>
-    </div>
+    {% endblock %}
   </div>
 {% endblock %}
