--- a/src/Argon/WebBundle/Resources/views/Page/homepage.html.twig
+++ b/src/Argon/WebBundle/Resources/views/Page/homepage.html.twig
@@ -1,4 +1,4 @@
-{% extends 'ArgonCommonBundle::layout.html.twig' %}
+{% extends '::layout_sidebar.html.twig' %}
 
 {% block title %}{{ parent() }} - Welcome{% endblock %}
 
