--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -16,7 +16,7 @@
   {% endfor %}
 
   <div class="container">
-    <div class="header">
+    <div class="page-header">
       <ul class="nav nav-pills pull-right">
         {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
             <li><a href="{{ path('fos_user_profile_show') }}">{{ app.user.username }}</a></li>
