--- a/app/Resources/FOSUserBundle/views/Profile/edit_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/edit_content.html.twig
@@ -1,8 +1,8 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
-<form action="{{ path('fos_user_profile_edit') }}" {{ form_enctype(form) }} method="POST" class="fos_user_profile_edit">
-    {{ form_widget(form) }}
-    <div>
-        <button type="submit" class="btn btn-primary">{{ 'profile.edit.submit'|trans }}</button>
-    </div>
+<form action="{{ path('fos_user_profile_edit') }}" {{ form_enctype(form) }} method="POST" class="fos_user_profile_edit" role="form">
+  {{ form_widget(form) }}
+  <div>
+    <button type="submit" class="btn btn-primary">{{ 'profile.edit.submit'|trans }}</button>
+  </div>
 </form>
