--- a/app/Resources/FOSUserBundle/views/ChangePassword/changePassword_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/ChangePassword/changePassword_content.html.twig
@@ -1,6 +1,6 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
-<form action="{{ path('fos_user_change_password') }}" {{ form_enctype(form) }} method="POST" class="fos_user_change_password">
+<form action="{{ path('fos_user_change_password') }}" {{ form_enctype(form) }} method="POST" class="fos_user_change_password" role="form">
   {{ form_widget(form) }}
   <div>
     <button type="submit" class="btn btn-primary">{{ 'change_password.submit'|trans }}</button>
