More layout to WebBundle

--- a/src/Argon/WebBundle/Resources/views/Page/homepage.html.twig
+++ b/src/Argon/WebBundle/Resources/views/Page/homepage.html.twig
@@ -1,6 +1,7 @@
-{% extends '::layout_sidebar.html.twig' %}
+{% extends 'ArgonWebBundle::layout.html.twig' %}
+{% trans_default_domain 'ArgonWebBundle' %}
 
-{% block title %}{{ parent() }} - Welcome{% endblock %}
+{% block title %}{{ parent() }} - {{ 'homepage.title'|trans }}{% endblock %}
 
 {% block content %}
 Welcome!
