--- a/src/Argon/WebBundle/Resources/views/layout.html.twig
+++ b/src/Argon/WebBundle/Resources/views/layout.html.twig
@@ -1,13 +1,14 @@
 {% extends "::layout.html.twig" %}
+{% trans_default_domain 'ArgonWebBundle' %}
 
 {% block wrapper %}
 <div class="row">
   <div class="col-xs-12 col-sm-9">
     {% block content %}{% endblock %}
   </div>
-  <div class="col-xs-6 col-sm-3">
+  <div class="col-xs-12 col-sm-3">
+    <h3>{{ 'sidebar.playerbox'|trans }}</h3>
     {% if not is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-    <h4>{{ 'sidebar.playerbox'|trans }}</h4>
     <form action="{{ path("fos_user_security_check") }}" method="post" role="form">
       <input type="hidden" name="_csrf_token" value="{{ form_csrf_provider.generateCsrfToken('authenticate') }}" />
       <div class="form-group">
@@ -23,13 +24,18 @@
       </div>
       <button type="submit" class="btn btn-default btn-block" id="_submit" name="_submit">{{ 'security.login.submit'|trans({}, 'FOSUserBundle') }}</button>
     </form>
-    <div class="well well-sm">
-      <ul>
-        <li><a href="{{ path("fos_user_registration_register") }}">{{ 'sidebar.register'|trans }}</a></li>
-        <li><a href="{{ path("fos_user_resetting_request") }}">{{ 'sidebar.reset_password'|trans }}</a></li>
-      </ul>
+    <div class="list-group" style="margin-top: 20px;">{# FIXME #}
+      <a href="{{ path("fos_user_registration_register") }}" class="list-group-item">{{ 'sidebar.user.register'|trans }}</a>
+      <a href="{{ path("fos_user_resetting_request") }}" class="list-group-item">{{ 'sidebar.user.reset_password'|trans }}</a>
     </div>
+    <hr>
     {% endif %}
+    <div class="list-group">
+      <a href="#" class="list-group-item">
+        <h4 class="list-group-item-heading">{{ 'sidebar.player.characters'|trans }}</h4>
+        <p>{{ 'sidebar.player.characters_description'|trans }}</p>
+      </a>
+    </div>
   </div>
 </div>
 {% endblock %}
