--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -18,6 +18,9 @@
   <div class="container">
     <div class="page-header">
       <ul class="nav nav-pills pull-right">
+        {% if is_granted("ROLE_ADMIN") %}
+            <li><a href="{{ path('admin_dashboard') }}">{{ 'layout.admin'|trans({}, 'ArgonWebBundle') }}</a></li>
+        {% endif %}
         {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
             <li><a href="{{ path('fos_user_profile_show') }}">{{ app.user.username }}</a></li>
             <li><a href="{{ path('fos_user_security_logout') }}">{{ 'layout.logout'|trans({}, 'FOSUserBundle') }}</a></li>
