[Admin][Game] New

--- a/src/Argon/GameBundle/Resources/views/Admin/Game/index.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Admin/Game/index.html.twig
@@ -23,6 +23,6 @@
     </tbody>
 </table>
 <div class="btn-group">
-  <a href="#" class="btn btn-default">{{ 'game.new'|trans }}</a>
+  <a href="{{ path('admin_game_new') }}" class="btn btn-default">{{ 'game.new'|trans }}</a>
 </div>
 {% endblock %}
