[Admin][Game][CharacterType]

--- a/src/Argon/GameBundle/Resources/views/Admin/Game/new.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Admin/Game/new.html.twig
@@ -1,5 +1,5 @@
 {% extends 'ArgonWebBundle::Admin/layout.html.twig' %}
-{% trans_default_domain 'ArgonAdmin' %}
+{% trans_default_domain 'admin' %}
 
 {% block title %}{{ parent() }} - {{ 'game.title'|trans }} - {{ 'game.new'|trans }}{% endblock %}
 
