--- a/src/Argon/WebBundle/Resources/views/Admin/dashboard.html.twig
+++ b/src/Argon/WebBundle/Resources/views/Admin/dashboard.html.twig
@@ -1,5 +1,5 @@
 {% extends 'ArgonWebBundle::Admin/layout.html.twig' %}
-{% trans_default_domain 'ArgonAdmin' %}
+{% trans_default_domain 'admin' %}
 
 {% block title %}{{ parent() }} - {{ 'dashboard.title'|trans }}{% endblock %}
 
