--- a/src/Argon/WebBundle/Resources/views/Admin/layout.html.twig
+++ b/src/Argon/WebBundle/Resources/views/Admin/layout.html.twig
@@ -1,5 +1,5 @@
 {% extends "::layout.html.twig" %}
-{% trans_default_domain 'ArgonAdmin' %}
+{% trans_default_domain 'admin' %}
 
 {% block wrapper %}
 <div class="row">
