--- a/src/Argon/WebBundle/Resources/views/Admin/layout.html.twig
+++ b/src/Argon/WebBundle/Resources/views/Admin/layout.html.twig
@@ -5,8 +5,8 @@
 <div class="row">
   <div class="col-xs-12 col-sm-3">
     <div class="list-group">
-      <a href="{{ path('admin_dashboard') }}" class="list-group-item">{{ 'sidebar.dashboard'|trans }}</a>
-      <a href="{{ path('admin_game') }}" class="list-group-item">{{ 'sidebar.game'|trans }}</a>
+      <a href="{{ path('admin_dashboard') }}" class="list-group-item{{ active == 'dashboard' ? ' active' : '' }}">{{ 'sidebar.dashboard'|trans }}</a>
+      <a href="{{ path('admin_character') }}" class="list-group-item{{ active == 'character' ? ' active' : '' }}">{{ 'sidebar.character'|trans }}</a>
     </div>
   </div>
   <div class="col-xs-12 col-sm-9">
