[Web] Rename translation file

--- a/src/Argon/WebBundle/Resources/views/layout.html.twig
+++ b/src/Argon/WebBundle/Resources/views/layout.html.twig
@@ -1,5 +1,5 @@
 {% extends "::layout.html.twig" %}
-{% trans_default_domain 'ArgonWebBundle' %}
+{% trans_default_domain 'web' %}
 
 {% block wrapper %}
 <div class="row">
