--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -21,7 +21,7 @@
         {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
             <li><a href="{{ path('fos_user_profile_show') }}">{{ app.user.username }}</a></li>
             {% if is_granted("ROLE_ADMIN") %}
-                <li><a href="{{ path('admin_dashboard') }}">{{ 'layout.admin'|trans({}, 'ArgonWebBundle') }}</a></li>
+                <li><a href="{{ path('admin_dashboard') }}">{{ 'layout.admin'|trans({}, 'web') }}</a></li>
             {% endif %}
             <li><a href="{{ path('fos_user_security_logout') }}">{{ 'layout.logout'|trans({}, 'FOSUserBundle') }}</a></li>
         {% else %}
