--- a/src/Argon/GameBundle/Resources/views/Character/new.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Character/new.html.twig
@@ -2,7 +2,7 @@
 {% extends 'ArgonWebBundle::layout.html.twig' %}
 {% trans_default_domain 'web' %}
 
-{% block title %}{{ parent() }} - {{ 'character.new'|trans }}{% endblock %}
+{% block title %}{{ parent() }} - {{ 'character.title'|trans }} - {{ game.name }}{% endblock %}
 
 {% block content %}
 {{ form(form) }}
