[Game] Add Race admin

--- a/src/Argon/WebBundle/Resources/views/Admin/layout.html.twig
+++ b/src/Argon/WebBundle/Resources/views/Admin/layout.html.twig
@@ -7,6 +7,7 @@
     <div class="list-group">
       <a href="{{ path('admin_dashboard') }}" class="list-group-item{{ active == 'dashboard' ? ' active' : '' }}">{{ 'sidebar.dashboard'|trans }}</a>
       <a href="{{ path('admin_character') }}" class="list-group-item{{ active == 'character' ? ' active' : '' }}">{{ 'sidebar.character'|trans }}</a>
+      <a href="{{ path('admin_race') }}" class="list-group-item{{ active == 'race' ? ' active' : '' }}">{{ 'sidebar.race'|trans }}</a>
     </div>
   </div>
   <div class="col-xs-12 col-sm-9">
