--- a/src/Argon/GameBundle/Resources/views/Character/index.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Character/index.html.twig
@@ -5,5 +5,5 @@
 {% block title %}{{ parent() }} - {{ 'character.title'|trans }}{% endblock %}
 
 {% block content %}
-<a href="{{ path('character_game') }}">{{ 'character.new'|trans }}</a>
+<a href="{{ path('character_game') }}" class="btn btn-default">{{ 'character.new'|trans }}</a>
 {% endblock %}
