--- a/src/Argon/GameBundle/Resources/views/Admin/Race/view.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Admin/Race/view.html.twig
@@ -5,6 +5,11 @@
 {% block title %}{{ parent() }} - {{ 'race.title'|trans }} - {{ entity.code }}{% endblock %}
 
 {% block content %}
+<ol class="breadcrumb">
+    <li><a href="{{ path('admin_dashboard') }}">{{ 'dashboard.title'|trans }}</a></li>
+    <li><a href="{{ path('admin_race') }}">{{ 'race.title'|trans }}</a></li>
+    <li class="active">{{ entity.code }}</li>
+</ol>
 <div class="form-horizontal">
     <div class="form-group">
         <label class="col-sm-2 control-label">{{ 'race.code'|trans }}</label>
@@ -19,9 +24,9 @@
         </div>
     </div>
     <div class="form-group">
-        <label class="col-sm-2 control-label">{{ 'race.multiplier'|trans }}</label>
+        <label class="col-sm-2 control-label">{{ 'race.modifier'|trans }}</label>
         <div class="col-sm-10">
-            <p class="form-control-static">{{ entity.multiplier }}</p>
+            <p class="form-control-static">{{ entity.modifier }}</p>
         </div>
     </div>
     <div class="form-group">
