--- a/src/Argon/GameBundle/Resources/views/Admin/Character/experience.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Admin/Character/experience.html.twig
@@ -37,7 +37,7 @@
             <td colspan="2">
                 <a href="{{ path('admin_character_experience_new', {'id': character.id}) }}" class="btn btn-primary">{{ 'character_experience.actions.new'|trans }}</a>
             </td>
-            <td class="text-right">{{ character.experience }}</td>
+            <td class="text-right"><strong>{{ character.experience }}</strong></td>
         </tr>
     </tfoot>
 </table>
