--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -11,5 +11,6 @@
   <body>
     {% block body %}{% endblock %}
     {% block javascripts %}{% endblock %}
+    <!-- {{ project.version }} -->
   </body>
 </html>
