--- a/src/Argon/WebBundle/Resources/views/Admin/layout.html.twig
+++ b/src/Argon/WebBundle/Resources/views/Admin/layout.html.twig
@@ -7,6 +7,8 @@
     <div class="list-group">
       <a href="{{ path('admin_dashboard') }}" class="list-group-item{{ active == 'dashboard' ? ' active' : '' }}">{{ 'sidebar.dashboard'|trans }}</a>
       <a href="{{ path('admin_player') }}" class="list-group-item{{ active == 'player' ? ' active' : '' }}">{{ 'sidebar.player'|trans }}</a>
+    </div>
+    <div class="list-group">
       <a href="{{ path('admin_character') }}" class="list-group-item{{ active == 'character' ? ' active' : '' }}">{{ 'sidebar.character'|trans }}</a>
       <a href="{{ path('admin_race') }}" class="list-group-item{{ active == 'race' ? ' active' : '' }}">{{ 'sidebar.race'|trans }}</a>
       <a href="{{ path('admin_skill') }}" class="list-group-item{{ active == 'skill' ? ' active' : '' }}">{{ 'sidebar.skill'|trans }}</a>
