--- a/src/Argon/GameBundle/Resources/views/Admin/Race/view.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Admin/Race/view.html.twig
@@ -2,13 +2,13 @@
 {% extends 'ArgonWebBundle::Admin/layout.html.twig' %}
 {% trans_default_domain 'admin' %}
 
-{% block title %}{{ parent() }} - {{ 'race.title'|trans }} - {{ entity.code }}{% endblock %}
+{% block title %}{{ parent() }} - {{ 'race.title'|trans }} - {{ entity }}{% endblock %}
 
 {% block content %}
 <ol class="breadcrumb">
     <li><a href="{{ path('admin_dashboard') }}">{{ 'dashboard.title'|trans }}</a></li>
     <li><a href="{{ path('admin_race') }}">{{ 'race.title'|trans }}</a></li>
-    <li class="active">{{ entity.code }}</li>
+    <li class="active">{{ entity }}</li>
 </ol>
 <div class="form-horizontal">
     <div class="form-group">
@@ -27,6 +27,16 @@
         <label class="col-sm-2 control-label">{{ 'race.modifier'|trans }}</label>
         <div class="col-sm-10">
             <p class="form-control-static">{{ entity.modifier }}</p>
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="col-sm-2 control-label">{{ 'race.parent'|trans }}</label>
+        <div class="col-sm-10">
+            {% if entity.parent %}
+                <p class="form-control-static"><a href="{{ path('admin_race_view', {'code': entity.parent.code}) }}">{{ entity.parent }}</a></p>
+            {% else %}
+                <p class="form-control-static">{{ 'race.parent_empty'|trans }}</p>
+            {% endif %}
         </div>
     </div>
     <div class="form-group">
