--- a/src/Argon/GameBundle/Resources/views/Admin/Skill/view.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Admin/Skill/view.html.twig
@@ -48,7 +48,7 @@
     <div class="form-group">
         <label class="col-sm-2 control-label">{{ 'skill.children'|trans }}</label>
         <div class="col-sm-10">
-            {{ include('ArgonGameBundle:Admin\\Skill:list.html.twig', {'entities': entities}) }}
+            {{ include('ArgonGameBundle:Partial\\Skill:list.html.twig', {'entities': entities}) }}
         </div>
     </div>
 </div>
