--- a/src/Argon/GameBundle/Resources/views/Admin/Race/view.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Admin/Race/view.html.twig
@@ -42,7 +42,7 @@
     <div class="form-group">
         <label class="col-sm-2 control-label">{{ 'race.children'|trans }}</label>
         <div class="col-sm-10">
-            {{ include('ArgonGameBundle:Admin\\Race:list.html.twig', {'entities': entities}) }}
+            {{ include('ArgonGameBundle:Partial\\Race:list.html.twig', {'entities': entities}) }}
         </div>
     </div>
 </div>
