--- a/src/Argon/GameBundle/Resources/views/Admin/Skill/view.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Admin/Skill/view.html.twig
@@ -12,6 +12,18 @@
 </ol>
 <div class="form-horizontal">
     <div class="form-group">
+        <label class="col-sm-2 control-label">{{ 'skill.ability'|trans }}</label>
+        <div class="col-sm-10">
+            <p class="form-control-static">
+                {% if entity.abilityCode %}
+                    <abbr title="{{ entity.abilityCode }}">{{ ('character_ability.types.' ~ entity.abilityCode)|trans({}, 'forms') }}</abbr>
+                {% else %}
+                    {{ 'skill.ability_empty'|trans }}
+                {% endif %}
+            </p>
+        </div>
+    </div>
+    <div class="form-group">
         <label class="col-sm-2 control-label">{{ 'skill.code'|trans }}</label>
         <div class="col-sm-10">
             <p class="form-control-static">{{ entity.code }}</p>
