--- a/src/Argon/GameBundle/Resources/views/Partial/Skill/list.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Partial/Skill/list.html.twig
@@ -1,6 +1,9 @@
 <table class="table table-striped">
     <thead>
         <tr>
+            {% if show_ability %}
+                <th>{{ 'skill.ability'|trans({}, 'admin') }}</th>
+            {% endif %}
             <th>{{ 'skill.code'|trans({}, 'admin') }}</th>
             <th>{{ 'skill.name'|trans({}, 'admin') }}</th>
         </tr>
@@ -8,12 +11,21 @@
     <tbody>
     {% for skill in entities %}
         <tr>
+            {% if show_ability %}
+            <td>
+                {% if skill.abilityCode %}
+                    <a href="{{ path('admin_skill', {'ability': skill.abilityCode}) }}" title="{{ skill.abilityCode }}">{{ ('character_ability.types.' ~ skill.abilityCode)|trans({}, 'forms') }}</a>
+                {% else %}
+                    &nbsp;
+                {% endif %}
+            </td>
+            {% endif %}
             <td><a href="{{ path('admin_skill_view', {'code': skill.code}) }}">{{ skill.code }}</a></td>
             <td>{{ skill.name }}</td>
         </tr>
     {% else %}
         <tr class="warning">
-            <td colspan="2">{{ 'skill.empty'|trans({}, 'admin') }}</td>
+            <td colspan="{{ 2 + (show_ability ? 1 : 0) }}">{{ 'skill.empty'|trans({}, 'admin') }}</td>
         </tr>
     {% endfor %}
     </tbody>
