--- a/src/Argon/GameBundle/Resources/views/Admin/Race/view.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Admin/Race/view.html.twig
@@ -8,7 +8,7 @@
 <ol class="breadcrumb">
     <li><a href="{{ path('admin_dashboard') }}">{{ 'dashboard.title'|trans }}</a></li>
     <li><a href="{{ path('admin_race') }}">{{ 'race.title'|trans }}</a></li>
-    <li class="active">{{ entity }}</li>
+    <li class="active">{{ entity.code }}</li>
 </ol>
 <div class="form-horizontal">
     <div class="form-group">
@@ -20,29 +20,19 @@
     <div class="form-group">
         <label class="col-sm-2 control-label">{{ 'race.name'|trans }}</label>
         <div class="col-sm-10">
-            <p class="form-control-static">{{ entity.name }}</p>
+            <p class="form-control-static">
+                {% if entity.name %}
+                    {{ entity.name }}
+                {% else %}
+                    <em>{{ 'race.name_empty'|trans({'%locale%': app.request.locale}) }}</em>
+                {% endif %}
+            </p>
         </div>
     </div>
     <div class="form-group">
         <label class="col-sm-2 control-label">{{ 'race.modifier'|trans }}</label>
         <div class="col-sm-10">
             <p class="form-control-static">{{ entity.modifier }}</p>
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="col-sm-2 control-label">{{ 'race.parent'|trans }}</label>
-        <div class="col-sm-10">
-            {% if entity.parent %}
-                <p class="form-control-static"><a href="{{ path('admin_race_view', {'code': entity.parent.code}) }}">{{ entity.parent }}</a></p>
-            {% else %}
-                <p class="form-control-static">{{ 'race.parent_empty'|trans }}</p>
-            {% endif %}
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="col-sm-2 control-label">{{ 'race.children'|trans }}</label>
-        <div class="col-sm-10">
-            {{ include('ArgonGameBundle:Partial\\Race:list.html.twig', {'entities': entities}) }}
         </div>
     </div>
 </div>
