--- a/src/Argon/GameBundle/Resources/views/Admin/Race/view.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Admin/Race/view.html.twig
@@ -8,15 +8,9 @@
 <ol class="breadcrumb">
     <li><a href="{{ path('admin_dashboard') }}">{{ 'dashboard.title'|trans }}</a></li>
     <li><a href="{{ path('admin_race') }}">{{ 'race.title'|trans }}</a></li>
-    <li class="active">{{ entity.code }}</li>
+    <li class="active">{{ entity.slug }}</li>
 </ol>
 <div class="form-horizontal">
-    <div class="form-group">
-        <label class="col-sm-2 control-label">{{ 'race.code'|trans }}</label>
-        <div class="col-sm-10">
-            <p class="form-control-static">{{ entity.code }}</p>
-        </div>
-    </div>
     <div class="form-group">
         <label class="col-sm-2 control-label">{{ 'race.name'|trans }}</label>
         <div class="col-sm-10">
