--- a/src/Argon/GameBundle/Resources/views/Admin/Skill/view.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Admin/Skill/view.html.twig
@@ -8,7 +8,15 @@
 <ol class="breadcrumb">
     <li><a href="{{ path('admin_dashboard') }}">{{ 'dashboard.title'|trans }}</a></li>
     <li><a href="{{ path('admin_skill') }}">{{ 'skill.title'|trans }}</a></li>
-    <li class="active">{{ entity }}</li>
+    {% set parts = [] %}
+    {% for part in entity.slug|split('/') %}
+        {% if loop.last %}
+            <li class="active">{{ part }}</li>
+        {% else %}
+            {% set parts = parts|merge([part]) %}
+            <li><a href="{{ path('admin_skill_view', {'slug': parts|join('/')}) }}">{{ part }}</a></li>
+        {% endif %}
+    {% endfor %}
 </ol>
 <div class="form-horizontal">
     <div class="form-group">
@@ -18,15 +26,9 @@
                 {% if entity.abilityCode %}
                     <abbr title="{{ entity.abilityCode }}">{{ ('character_ability.types.' ~ entity.abilityCode)|trans({}, 'forms') }}</abbr>
                 {% else %}
-                    {{ 'skill.ability_empty'|trans }}
+                    <em>{{ 'skill.ability_empty'|trans }}</em>
                 {% endif %}
             </p>
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="col-sm-2 control-label">{{ 'skill.code'|trans }}</label>
-        <div class="col-sm-10">
-            <p class="form-control-static">{{ entity.code }}</p>
         </div>
     </div>
     <div class="form-group">
@@ -44,23 +46,31 @@
     <div class="form-group">
         <label class="col-sm-2 control-label">{{ 'skill.max'|trans }}</label>
         <div class="col-sm-10">
-            <p class="form-control-static">{{ entity.max|default('skill.max_empty'|trans) }}</p>
+            <p class="form-control-static">
+                {% if entity.max %}
+                    {{ entity.max }}
+                {% else %}
+                    <em>{{ 'skill.max_empty'|trans }}</em>
+                {% endif %}
+            </p>
         </div>
     </div>
     <div class="form-group">
         <label class="col-sm-2 control-label">{{ 'skill.parent'|trans }}</label>
         <div class="col-sm-10">
-            {% if entity.parent %}
-                <p class="form-control-static"><a href="{{ path('admin_skill_view', {'code': entity.parent.code}) }}">{{ entity.parent }}</a></p>
-            {% else %}
-                <p class="form-control-static">{{ 'skill.parent_empty'|trans }}</p>
-            {% endif %}
+            <p class="form-control-static">
+                {% if entity.parent %}
+                    <a href="{{ path('admin_skill_view', {'slug': entity.parent.slug}) }}">{{ entity.parent }}</a>
+                {% else %}
+                    <em>{{ 'skill.parent_empty'|trans }}</em>
+                {% endif %}
+            </p>
         </div>
     </div>
     <div class="form-group">
         <label class="col-sm-2 control-label">{{ 'skill.children'|trans }}</label>
         <div class="col-sm-10">
-            {{ include('ArgonGameBundle:Partial\\Skill:list.html.twig', {'entities': entities}) }}
+            {{ include('ArgonGameBundle:Partial\\Skill:list.html.twig', {'entities': entity.children, 'show_ability': false}) }}
         </div>
     </div>
 </div>
