[Game] Move Admin Partials

--- a/src/Argon/GameBundle/Resources/views/Admin/Race/index.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Admin/Race/index.html.twig
@@ -9,5 +9,5 @@
     <li><a href="{{ path('admin_dashboard') }}">{{ 'dashboard.title'|trans }}</a></li>
     <li class="active">{{ 'race.title'|trans }}</li>
 </ol>
-    {{ include('ArgonGameBundle:Partial\\Race:list.html.twig', {'entities': entities}) }}
+    {{ include('ArgonGameBundle:Admin\\Partial\\Race:list.html.twig', {'entities': entities}) }}
 {% endblock %}
