--- a/src/Argon/GameBundle/Resources/views/Admin/Skill/view.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Admin/Skill/view.html.twig
@@ -58,7 +58,7 @@
     <div class="form-group">
         <label class="col-sm-2 control-label">{{ 'skill.requirements'|trans }}</label>
         <div class="col-sm-10">
-            {{ include('ArgonGameBundle:Partial\\Skill:list.html.twig', {'entities': entity.requirements, 'show_ability': false}) }}
+            {{ include('ArgonGameBundle:Admin\\Partial\\Skill:list.html.twig', {'entities': entity.requirements, 'show_ability': false}) }}
         </div>
     </div>
 </div>
